error fix for filter

--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
             <th>
                 Title
                 <br>
-                <input type="text" id="titleFilter" onkeyup="filterTable(0, 'titleFilter')">
+                <input type="text" id="titleFilter">
             </th>
             <th>
                 Category
                 <br>
-                <input type="text" id="categoryFilter" onkeyup="filterTable(1, 'categoryFilter')">
+                <input type="text" id="categoryFilter">
             </th>
             <th>
                 Description
                 <br>
-                <input type="text" id="descriptionFilter" onkeyup="filterTable(2, 'descriptionFilter')">
+                <input type="text" id="descriptionFilter">
             </th>
         </tr>
     </table>
