--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </script>
 </head>
 <body>
-    <h1>Custom Craigslist</h1>
+    <h1>notocode.com - your simple no code directory - </h1>
 
     <form id="postForm">
         <label for="title">Title:</label>
