seperate filter script

--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
 
     <!-- Load your custom scripts -->
     <script src="scripts.js" type="module"></script>
+    <script src="filter.js"></script>
 </body>
 </html>
