--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         <br>
         <label for="category">Category:</label>
         <select id="category" required>
-            <option value="vehicles">Vehicles</option>
-            <option value="electronics">Electronics</option>
-            <option value="furniture">Furniture</option>
+            <option value="vehicles">Prompt</option>
+            <option value="electronics">Job</option>
+            <option value="furniture">Freelancer</option>
         </select>
         <br>
         <label for="description">Description:</label>
         <input type="text" id="description" required>
         <br>
-        <button type="submit">Add Row</button>
+        <button type="submit">Add a record</button>
     </form>
 
 
