--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <br>
         <label for="category">Category:</label>
         <select id="category" required>
-            <option value="vehicles">Prompt</option>
-            <option value="electronics">Job</option>
-            <option value="furniture">Freelancer</option>
+            <option value="Prompt">Prompt</option>
+            <option value="Job">Job</option>
+            <option value="Freelancer">Freelancer</option>
         </select>
         <br>
         <label for="description">Description:</label>
