--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>notocode.com - your simple no code directory - </title>
+    <title>notocode.com - your simple prompt and no code directoy- </title>
     <link rel="stylesheet" href="styles.css">
     <!-- Firebase SDK snippet from your project settings -->
     <script>
@@ -26,17 +26,17 @@
     <h1>notocode.com - your simple no code directory - </h1>
 
     <form id="postForm">
-        <label for="title">Title:</label>
+        <label for="title">Title (do you have a name or are you a company):</label>
         <input type="text" id="title" required>
         <br>
-        <label for="category">Category:</label>
+        <label for="category">Category (Job Offer, Prompt Sale, Freelancer):</label>
         <select id="category" required>
             <option value="Prompt">Prompt</option>
-            <option value="Job">Job</option>
+            <option value="Job">Job Offer</option>
             <option value="Freelancer">Freelancer</option>
         </select>
         <br>
-        <label for="description">Description:</label>
+        <label for="description">Description (describe the details of your listing, how people can reach you etc.):</label>
         <input type="text" id="description" required>
         <br>
         <button type="submit">Add a record</button>
